lights glowing but not yet in order.
WIP glow cycle.

Glow animation working.

Glow animation working, modal no longer interferring with left menu margins.

Cleaning up code. Adding PR suggestions.

Adding typing.

Refactor edit profile modal dialog to no longer use the signal code.

--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -48,7 +48,7 @@
 
   .avatar-center-inner {
     display: flex;
-    padding-top: 30px;
+    // padding-top: 30px;
   }
 
   .upload-btn-background {
