--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -756,6 +756,7 @@ label {
   background-color: rgba($session-color-black, 0.72);
   opacity: 0;
   transition: $session-transition-duration;
+  margin: 30px 0px;
 
   &:after {
     content: 'Edit';
@@ -1200,38 +1201,43 @@ input {
 
 // .session-onion-path-wrapper {
 
-  .onion__node-list {
+.onion__node-list {
+  display: flex;
+  flex-direction: column;
+  margin: $session-margin-sm;
+  align-items: flex-start;
+
+  .onion__node {
     display: flex;
-    flex-direction: column;
-    margin: $session-margin-sm;
-    align-items: flex-start;
+    flex-grow: 1;
+    align-items: center;
+    margin: $session-margin-xs;
 
-    .onion__node {
-      display: flex;
-      flex-grow: 1;
-      align-items: center;
-      margin: $session-margin-xs;
-
-      * {
-        margin: $session-margin-sm;
-      }
-
-      svg {
-        animation: glow 1s ease-in-out infinite alternate;
-      }
+    * {
+      margin: $session-margin-sm;
     }
+
+    .session-icon-button {
+      margin: $session-margin-sm !important;
+    }
+
+    // svg {
+    //   animation: glow 1s ease-in-out infinite alternate;
+    // }
   }
+}
 
-  @keyframes glow {
-    from {
-    -webkit-filter: drop-shadow( 0px 0px 3px rgba(0,0,0,0));
-        filter: drop-shadow( 0px 0px 3px rgba(0,0,0,0));
-    }
-    to {
-    -webkit-filter: drop-shadow( 0px 0px 5px rgba(46, 247, 28, 0.7));
-        filter: drop-shadow( 0px 0px 5px rgba(68, 236, 2, 0.7));
-    }
-  }
+// @keyframes glow {
+//   from {
+//   -webkit-filter: drop-shadow( 0px 0px 3px rgba(0,0,0,0));
+//       filter: drop-shadow( 0px 0px 3px rgba(0,0,0,0));
+//   }
+//   to {
+//   -webkit-filter: drop-shadow( 0px 0px 5px rgba(46, 247, 28, 0.7));
+//       filter: drop-shadow( 0px 0px 5px rgba(68, 236, 2, 0.7));
+//       color: red;
+//   }
+// }
 
 // }
 
