Fix edit icon styling.

--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -303,6 +303,10 @@
         font-size: $session-font-md;
         padding: 0px $session-margin-sm;
       }
+
+      .session-icon-button {
+        padding: 0px;
+      }
     }
   }
 }
