add / remove moderator modals refactored. Need to remove old whisper code and files.

--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -1,9 +1,9 @@
 .modal {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: rgba(0, 0, 0, 0.3);
   padding: 0 20px;
   z-index: 100;
