Fixed update-group-name dialog styling.

--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -10,6 +10,7 @@
 .edit-profile-dialog,
 .create-group-dialog,
 .user-details-dialog,
+.update-group-dialog,
 .onion-status-dialog {
   .content {
     max-width: 100% !important;
