fix up onion path animation with no glowing nodes

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -18,6 +18,10 @@
   word-break: break-all;
 }
 
+.session-icon-button svg path {
+  transition: fill 0.3s ease;
+}
+
 input,
 textarea {
   caret-color: $session-color-green !important;
