vertical line wip.

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1211,8 +1211,19 @@ input {
     align-items: center;
     margin: $session-margin-xs;
 
-    * {
+    &__country {
       margin: $session-margin-sm;
+    }
+
+    &__growing-icon {
+      position: relative;
+      width: 20px;
+      height: 20px svg {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
 
     .session-icon-button {
@@ -1220,16 +1231,14 @@ input {
     }
   }
 
-    .onion__vertical-line {
-      border-left: 2px solid rgba($color: #585858, $alpha: 1.0);
-      height: 185px;
-      position: absolute;
-      left: 22px;
-
-      // node item padding (i.e. one destination) + icon padding + half sessionIcon.small height
-      top: 23.35px;
-      z-index: -1;
-    }
+  .onion__vertical-line {
+    border-left: 2px solid $onionPathLineColor;
+    height: 182px;
+    position: absolute;
+    left: 11px;
+    top: 22px;
+    z-index: -1;
+  }
 }
 
 .session-nickname-wrapper {
