--- a/stylesheets/themes.scss
+++ b/stylesheets/themes.scss
@@ -11,6 +11,8 @@ $borderLightTheme: #f1f1f1; // search for references on ts TODO: make this expos
 $borderDarkTheme: rgba($white, 0.06);
 $inputBackgroundColor: #8e8e93;
 
+$onionPathLineColor: rgba(#7a7a7a, 0.6);
+
 $borderAvatarColor: unquote(
   '#00000059'
 ); // search for references on ts TODO: make this exposed on ts
