--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -200,6 +200,7 @@
 
 .module-message__generic-attachment__icon-container {
   position: relative;
+  cursor: pointer;
 }
 .module-message__generic-attachment__spinner-container {
   padding-inline-start: 4px;
