Transparent background for images.

--- a/stylesheets/_theme_dark.scss
+++ b/stylesheets/_theme_dark.scss
@@ -401,7 +401,7 @@
   // Module: Image
 
   .module-image {
-    background-color: $color-black;
+    background: none;
   }
 
   .module-image__border-overlay {
