cherry-pick conflicts.

--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -49,8 +49,14 @@
   }
 
   &__container--outgoing {
-    @include themify($themes) {
-      background: themed('sentMessageBackground');
+    &--opaque {
+      @include themify($themes) {
+        background: themed('sentMessageBackground');
+      }
+    }
+
+    &--transparent {
+      background: none;
     }
 
     .module-message__text {
