make caret-color as text-color to make it for visible

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -24,7 +24,9 @@
 
 input,
 textarea {
-  caret-color: $session-color-green !important;
+  @include themify($themes) {
+    caret-color: themed('textColor') !important;
+  }
 }
 
 * {
