--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -153,6 +153,28 @@ $session-font-h4: 16px;
   color: subtle($color);
 }
 
+@mixin pulse-color($color) {
+
+  animation: pulseColor 2s infinite;
+
+  @keyframes pulseColor {
+    0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba($color, 0.7);
+    }
+    
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 10px rgba($color, 0);
+    }
+    
+    100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba($color, 0);
+    }
+  }
+}
+
 $session-subtle-factor: 0.6;
 
 @function subtle($color) {
@@ -192,6 +214,23 @@ $session-fadein-duration: 0.1s;
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes pulse-shadow {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
 
