--- a/stylesheets/_theme_dark.scss
+++ b/stylesheets/_theme_dark.scss
@@ -520,4 +520,8 @@
   .module-message-search-result__body {
     color: $color-gray-05;
   }
+
+  .module-message__link-preview__icon-container__circle-background {
+    background-color: $color-gray-25;
+  }
 }
