--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -20,8 +20,27 @@
 }
 
 .module-message {
+  position: relative;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+
   &__text-error {
     font-style: italic;
+  }
+
+  &_text {
+    font-size: 14px;
+    line-height: 18px;
+    text-align: start;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    white-space: pre-wrap;
+
+    a {
+      text-decoration: underline;
+    }
   }
 
   &__container--incoming {
@@ -35,6 +54,19 @@
       background: none;
     }
 
+    border-top-right-radius: $message-container-border-radius;
+    border-bottom-right-radius: $message-container-border-radius;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+
+    &--first-of-series {
+      border-top-left-radius: $message-container-border-radius;
+    }
+
+    &--last-of-series {
+      border-bottom-left-radius: $message-container-border-radius;
+    }
+
     .module-message__text {
       @include themify($themes) {
         color: themed('receivedMessageText');
@@ -46,15 +78,14 @@
         }
       }
     }
-
-    .module-message__author {
-      @include themify($themes) {
-        @include session-color-subtle(themed('receivedMessageText'));
-      }
-    }
   }
 
   &__container--outgoing {
+    border-top-left-radius: $message-container-border-radius;
+    border-bottom-left-radius: $message-container-border-radius;
+
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     &--opaque {
       @include themify($themes) {
         background: themed('sentMessageBackground');
@@ -63,6 +94,14 @@
 
     &--transparent {
       background: none;
+    }
+
+    &--first-of-series {
+      border-top-right-radius: $message-container-border-radius;
+    }
+
+    &--last-of-series {
+      border-bottom-right-radius: $message-container-border-radius;
     }
 
     .module-message__text {
@@ -76,16 +115,14 @@
         }
       }
     }
-
-    .module-message__author {
-      @include themify($themes) {
-        @include session-color-subtle(themed('sentMessageText'));
-      }
-    }
   }
 }
 
 .session-message-wrapper {
+  letter-spacing: 0.03em;
+  margin-top: 3px;
+  display: flex;
+  align-items: center;
   &.message-highlighted {
     animation: highlightedMessageAnimation 1s ease-in-out;
   }
@@ -98,6 +135,14 @@
         }
       }
     }
+  }
+
+  &-incoming {
+    margin-inline-end: auto;
+  }
+
+  &-outgoing {
+    margin-inline-start: auto;
   }
 }
 
