--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -93,6 +93,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 10px;
 }
 
 .module-message__generic-attachment__icon-container {
